# hitspot

./: .gitmodules  CMakeLists.txt
include/: BoundingBox.h  CollisionSystem.h
include/hitspot/: BoundingBox.h  CollisionSystem.h
src/: BoundingBox.cpp  CollisionSystem.cpp
test/: payload-test.cpp  simple-test.cpp  test.h
